# src/routers/categories.js
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import ctrlWrapper from '../utils/ctrlWrapper.js';
+import { getCategories } from '../controllers/categories.js';
+
+const router = Router();
+
+router.get('/', ctrlWrapper(getCategories));
+
+export default router;
